fix: harden auto pagination
